src/test/ui/mir-dataflow/uninits-1.stderr
error: rustc_peek: bit not set
  --> $DIR/uninits-1.rs:18:14
   |
LL |     unsafe { rustc_peek(&x) };
   |              ^^^^^^^^^^^^^^

error: rustc_peek: bit not set
  --> $DIR/uninits-1.rs:19:14
   |
LL |     unsafe { rustc_peek(&y) };
   |              ^^^^^^^^^^^^^^

error: rustc_peek: bit not set
  --> $DIR/uninits-1.rs:20:14
   |
LL |     unsafe { rustc_peek(&z) };
   |              ^^^^^^^^^^^^^^

error: rustc_peek: bit not set
  --> $DIR/uninits-1.rs:36:14
   |
LL |     unsafe { rustc_peek(&x); }
   |              ^^^^^^^^^^^^^^

error: rustc_peek: bit not set
  --> $DIR/uninits-1.rs:44:14
   |
LL |     unsafe { rustc_peek(&ret); }
   |              ^^^^^^^^^^^^^^^^

error: stop_after_dataflow ended compilation

error: aborting due to 6 previous errors

